
    o scanBcfHeader parses values with embedded commas or =

    o scanFa fails, rather than returns incorrect sequences, when file
    is compressed and file positions are not accessed sequentially

    o scanBcf parses VCF files with no genotype information.

    o scanBam called with the first range having no reads returned
    invalid results for subsequent ranges; introduced in svn r57138

CHANGES IN VERSION 1.4.0
------------------------

NEW FEATURES

    o BamFile class allows bam files to be open across calls to
    scanBam and friends. This can be helpful when wanting to avoid
    repeated loading of the index, for instance.

    o BcfFile, scanBcf, scanBcfHeader to parse bcftools' .vcf and .bcf
    files. Note that this implements bcftools notions of vcf and bcf,
    and are not fully compliant with vcf-4.0.

    o asBam converts SAM files to (indexed) BAM files

    o FaFile, indexFa, scanIndexFa, scanFa index and parse (indexed)
    fasta files.

BUG FIXES

    o scanBamFlag isValidVendorRead had reversed TRUE/FALSE logic

    o Attempts to read too many records caught more gracefully.

    o samtools output to fprintf() or calls to exit() are handled more
    gracefully

CHANGES IN VERSION 1.2.0
------------------------

NEW FEATURES

    o Update to samtools 0.1.8

    o Update to samtools svn rev 750 (Mon, 27 Sep 2010)

    o sortBam sorts a BAM file

BUG FIXES

    o Attempts to parse non-existent local files now generate an error

    o Reads whose last nucleotide overlaps the first of a range are
    now scanned / counted.

    o scanning / counting reads late in large Windows files is fast

    o scanBam tag fields of type 'A' parsed correctly

CHANGES IN VERSION 1.0.0
-----------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o scanBam returns minus-strand reads in the manner presented in
    the BAM file, i.e., as though on the positive strand. This occurs
    in revision 0.1.34
